--- a/js-denglu-provider/src/main/resources/templates/test.html
+++ b/js-denglu-provider/src/main/resources/templates/test.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>测试Thymeleaf</title>
+    <script type="text/javascript" src="../static/js/jquery-1.8.3.min.js"></script>
+    <script type="text/javascript">
+        $(function () {
+            $.ajax({
+                type: "Post",
+                url: "/login",
+                success: function(data) {
+                    console.log(data);
+                },
+                beforeSend: function(xhr) {
+                    xhr.setRequestHeader("token", "eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJ1c2VyIjoxfQ.Ubff6_ZMlkqT-Hsxp317uyiO9kAV1h4N40gMEYHs5xRsHDlJ9IMBWGuoj12nAq95a0WXOAnRRbsXVx9Ip24lsg");
+                }
+            });
+        })
+    </script>
 </head>
 <body>
-<h3 th:text="${name}"></h3>
-
+<h3 th:text="${token}"></h3>
+<h3 th:text="${id}"></h3>
 <hr/>
 
 进入用户添加：<a href="add">用户添加</a>
